language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_string.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let assert \"a\" <> j = \"ab\"\n\n}\n"
---
fn wibble() {
  let assert "a" <> j = "ab"
|
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [3:0-3:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
j
  kind:   Variable
  detail: String
  sort:   2_j
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "j"
wibble
  kind:   Function
  detail: fn() -> String
  sort:   2_wibble
  desc:   app
  edits:
    [3:0-3:0]: "wibble"
