language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_variable_completions_after_case_clause_scope.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> Nil\n    something_else -> s\n  }\n  s\n}\n"
---
pub fn main() {
  case todo {
    something -> Nil
    something_else -> s|
  }
  s
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [4:22-4:22]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   04_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn() -> a
  sort:   2_main
  desc:   app
  edits:
    [4:22-4:22]: "main"
something_else
  kind:   Variable
  detail: a
  sort:   02_something_else
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:22-4:22]: "something_else"
