language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_variable_completions_before_declaration_in_anonymous_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  fn() {\n    s\n    let something = 10\n  }\n}\n"
---
pub fn main() {
  fn() {
    s|
    let something = 10
  }
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [3:4-3:4]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn() -> fn() -> Int
  sort:   2_main
  desc:   app
  edits:
    [3:4-3:4]: "main"
