language-server/src/tests/snapshots/gleam_language_server__tests__completion__opaque_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub opaque type Wibble {\n  Wobble\n}\n"
---
|
pub opaque type Wibble {
  Wobble
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   2_Wobble
  desc:   app
  edits:
    [1:0-1:0]: "Wobble"
